rework colors, spacing, fix header

--- a/src/style.css
+++ b/src/style.css
@@ -1,23 +1,25 @@
 :root {
     --accent-background: black;
     --accent-lowlight: hsl(300, 100%, 25%);
-    --accent: hsl(300, 100%, 50%);
+    --accent: hsl(300, 100%, 40%);
     --accent-highlight: hsl(300, 100%, 75%);
     --accent-foreground: white;
         
     --neutral-background: white;
     --neutral-foreground: black;
 
-    --primary-background: white;
-    --primary-foreground: black;
+    --primary-background: black;
+    --primary: hsl(300, 100%, 50%);
+    --primary-foreground: white;
 }
 body {
     margin: 0;
 
-    background-color: var(--neutral-background);
+
     background-attachment: fixed;
     background-image: url("background.png");
 }
+
 
 a:link {
     color: var(--accent)
@@ -44,7 +46,7 @@ pre > code {
 
 h1 > a:link, h2 > a:link, h3 > a:link, h4 > a:link, h5 > a:link, h6 > a:link,
 h1 > a:visited, h2 > a:visited, h3 > a:visited, h4 > a:visited, h5 > a:visited, h6 > a:visited {
-    color: var(--neutral-foreground);
+    color: inherit;
     text-decoration: none;
 }
 h1 > a:hover, h2 > a:hover, h3 > a:hover, h4 > a:hover, h5 > a:hover, h6 > a:hover {
@@ -65,13 +67,15 @@ h1 > a:hover, h2 > a:hover, h3 > a:hover, h4 > a:hover, h5 > a:hover, h6 > a:hov
 
 
 header {
-    background-color: var(--accent);
-    color: var(--accent-foreground);
+    background-color: var(--primary);
+    color: var(--primary-foreground);
+    margin: 2em;
+    padding: 1em;
 }
 footer {
     margin-top: auto;
     margin-right: auto;
-    background-color: var(--accent);
+    background-color: var(--primary);
 }
 nav {
     background-color: rgba(255, 255, 255, 0.9);
